Minecraft 1.17.1 support